# unified_config_loader

./: Cargo.toml  DESIGN.md  INSTRUCTIONS.md  README.md
config_derive_pm/: Cargo.toml
config_derive_pm/src/: lib.rs
examples/: basic.rs  composed_config.rs  default_fn.rs  env_override.rs  error_handling.rs  file_config.rs  file_precedence.rs  file_with_comments.rs  hot_reload_conventional.rs  hot_reload_default_fn.rs  hot_reload_invalid_fallback.rs  hot_reload_multi_format.rs  hot_reload_simulation.rs  hot_reload_single_file.rs  hot_reload_with_gracefull_shutdown.rs  ini_basic.rs  ini_config.rs  ini_env_override.rs  json_basic.rs  json_config.rs  json_env_override.rs  load_from_file.rs  precedence.rs  required_fields.rs  toml_basic.rs  toml_config.rs  toml_env_override.rs  toml_with_comments.rs  validation.rs  yaml_basic.rs  yaml_default_fn.rs  yaml_required_override.rs
files/: api.json  app.ini  app.json  app.toml  app.yaml  auth.yaml  basic.env  config.toml  config_default_fn_hr.toml  config_fallback_hr.toml  database.ini  database.toml  hr_conv.toml  my_config.toml  production.env  server.ini  server.toml  service.yaml  with_comments.env  worker.json
src/: errors.rs  helpers.rs  hot_reload.rs  lib.rs  models.rs  traits.rs
tests/: hot_reload_tests.rs  integration_tests.rs
