[workspace]
members = ["config_derive_pm"]

[package]
name = "unified_config_loader"
version = "0.1.0"
edition = "2024"
authors = ["tur461"]
description = "A strongly-typed, multi-source configuration loader with clear precedence and validation"

[features]
default = []
ini = ["dep:rust-ini"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
hot-reload = ["dep:notify"]

[dependencies]
config_derive_pm = { path = "config_derive_pm" }
thiserror = "2.0.18"

# optional deps
rust-ini = { version = "0.21.3", optional = true }
notify = { version = "8.2.0", optional = true }
toml = { version = "1.1.2", optional = true }
serde_json = { version = "1.0.150", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
